import { Controller } from '@nestjs/common';
import { GrpcMethod, GrpcStreamMethod } from '@nestjs/microservices';
import { Observable } from 'rxjs';
import { AIService } from './ai.service';

@Controller()
export class AIGrpcController {
  constructor(private readonly aiService: AIService) {}

  // ==================== AI主观题批改 ====================

  @GrpcMethod('AIService', 'GradeEssay')
  async gradeEssay(data: {
    questionId: string;
    studentAnswer: string;
    standardAnswer: string;
    gradingCriteria: string;
    totalScore: number;
    questionType: string;
  }) {
    // TODO: 实现AI主观题批改逻辑
    // 1. 使用DeepSeek API进行语义理解
    // 2. 对比标准答案，分点给分
    // 3. 生成评语和建议
    // 4. 计算置信度，决定是否需要人工复核
    return {
      id: 'grading_record_id',
      score: 0,
      scorePoints: [],
      comment: '',
      suggestion: '',
      confidence: 0.85,
      needsHumanReview: false,
    };
  }

  @GrpcMethod('AIService', 'BatchGradeEssays')
  async batchGradeEssays(data: { requests: any[] }) {
    // TODO: 实现批量批改逻辑
    return {
      results: [],
      totalCount: data.requests.length,
      successCount: 0,
      failedCount: 0,
    };
  }

  // ==================== AI智能出题 ====================

  @GrpcMethod('AIService', 'GenerateQuestion')
  async generateQuestion(data: {
    type: string;
    knowledgePoint: string;
    difficulty: string;
    categoryId: string;
    context?: string;
  }) {
    // TODO: 实现AI生成题目逻辑
    // 1. 根据知识点和难度生成题目
    // 2. 使用DeepSeek API生成题干、选项、答案、解析
    return {
      type: data.type,
      content: '',
      options: [],
      answer: '',
      explanation: '',
      difficulty: data.difficulty,
      knowledgePoint: data.knowledgePoint,
    };
  }

  @GrpcMethod('AIService', 'GenerateQuestionsByKnowledge')
  async generateQuestionsByKnowledge(data: {
    knowledgePointId: string;
    typeCounts: any[];
    difficulty: string;
  }) {
    // TODO: 实现按知识点生成多个题目逻辑
    return {
      questions: [],
      totalCount: 0,
    };
  }

  // ==================== AI资料解析 ====================

  @GrpcMethod('AIService', 'ParseDocument')
  async parseDocument(data: {
    documentId: string;
    documentUrl: string;
    documentType: string;
    extractKnowledgePoints: boolean;
  }) {
    // TODO: 实现文档解析逻辑
    // 1. 根据文档类型调用对应解析器（PDF/Word/PPT/OCR）
    // 2. 提取文本内容
    // 3. 使用AI分析章节结构
    // 4. 提取知识点和关键概念
    // 5. 生成摘要
    return {
      documentId: data.documentId,
      parsedContent: '',
      chapters: [],
      knowledgePoints: [],
      keyConcepts: [],
      summary: '',
    };
  }

  @GrpcMethod('AIService', 'GenerateQuestionsFromDocument')
  async generateQuestionsFromDocument(data: {
    documentId: string;
    questionCount: number;
    typeCounts: any[];
    difficulty: string;
  }) {
    // TODO: 实现从文档生成题目逻辑
    // 1. 获取文档解析结果
    // 2. 提取关键知识点
    // 3. 使用AI批量生成题目
    return {
      questions: [],
      totalCount: data.questionCount,
    };
  }

  // ==================== AI对话答疑 ====================

  @GrpcMethod('AIService', 'Chat')
  async chat(data: {
    sessionId: string;
    userId: string;
    message: string;
    context?: string;
    history?: any[];
  }) {
    // TODO: 实现AI对话答疑逻辑
    // 1. 构建对话上下文
    // 2. 使用RAG检索相关知识
    // 3. 调用DeepSeek API生成回答
    // 4. 推荐相关问题
    return {
      sessionId: data.sessionId,
      message: '',
      relatedQuestions: [],
      references: [],
    };
  }

  @GrpcStreamMethod('AIService', 'StreamChat')
  streamChat(data: any): Observable<any> {
    // TODO: 实现流式对话逻辑
    // 使用Observable实现Server-Side Streaming
    return new Observable((observer) => {
      // 流式返回AI回答
      observer.next({ sessionId: data.sessionId, chunk: 'Hello', isComplete: false });
      observer.complete();
    });
  }

  // ==================== AI学习路径推荐 ====================

  @GrpcMethod('AIService', 'RecommendLearningPath')
  async recommendLearningPath(data: {
    userId: string;
    categoryId: string;
    targetLevel: string;
    availableDays: number;
  }) {
    // TODO: 实现学习路径推荐逻辑
    // 1. 分析用户当前水平
    // 2. 计算知识点差距
    // 3. 生成个性化学习路径
    // 4. 估算学习时间
    return {
      pathId: 'learning_path_id',
      title: '',
      stages: [],
      estimatedDays: data.availableDays,
      description: '',
    };
  }

  @GrpcMethod('AIService', 'RecommendQuestions')
  async recommendQuestions(data: {
    userId: string;
    categoryId: string;
    count: number;
    recommendationType: string;
  }) {
    // TODO: 实现智能推题逻辑
    // 1. 分析用户薄弱点
    // 2. 根据推荐类型选择题目
    // 3. 考虑难度梯度
    return {
      questions: [],
      totalCount: data.count,
    };
  }

  // ==================== AI错题分析 ====================

  @GrpcMethod('AIService', 'AnalyzeWrongQuestions')
  async analyzeWrongQuestions(data: {
    userId: string;
    wrongQuestionIds: string[];
    categoryId: string;
  }) {
    // TODO: 实现错题分析逻辑
    // 1. 获取错题详情
    // 2. 分析知识点掌握情况
    // 3. 识别薄弱环节
    // 4. 生成改进建议
    return {
      knowledgeGaps: [],
      weakKnowledgePoints: [],
      overallAnalysis: '',
      suggestions: [],
    };
  }

  @GrpcMethod('AIService', 'DiagnoseKnowledge')
  async diagnoseKnowledge(data: { userId: string; categoryId: string }) {
    // TODO: 实现知识诊断逻辑
    // 1. 分析用户所有答题记录
    // 2. 使用IRT模型计算知识点掌握度
    // 3. 生成能力画像（雷达图数据）
    // 4. 提供针对性建议
    return {
      knowledgePoints: [],
      abilityProfile: {
        comprehension: 0,
        application: 0,
        analysis: 0,
        synthesis: 0,
      },
      recommendations: [],
    };
  }

  // ==================== AI智能组卷 ====================

  @GrpcMethod('AIService', 'SmartComposePaper')
  async smartComposePaper(data: {
    title: string;
    categoryId: string;
    totalScore: number;
    difficulty: string;
    typeCounts: any[];
    knowledgePointIds?: string[];
    considerStudentLevel?: boolean;
    targetUserId?: string;
  }) {
    // TODO: 实现AI智能组卷逻辑
    // 1. 分析组卷要求
    // 2. 从题库智能选择题目
    // 3. 考虑难度分布、知识点覆盖
    // 4. 如果是个性化组卷，考虑学生水平
    return {
      id: 'paper_id',
      title: data.title,
      questions: [],
      totalScore: data.totalScore,
      difficulty: data.difficulty,
      coveredKnowledgePoints: [],
    };
  }
}

